# clean-architecture-minesweeper

./: .pre-commit-config.yaml  README.md  README.rst  main.py  pyproject.toml
.github/workflows/: python-app.yml
minesweeper/model/: board.py  boardgenerator.py  boardrevealer.py  constants.py  game.py
minesweeper/model/interfaces/: iboard.py  iboardgenerator.py  iboardrevealer.py  igame.py
minesweeper/view/: SimpleBoardViewer.py
minesweeper/view/interfaces/: ipresenter.py
model/interfaces/: iboard.py
tests/model/: test_board.py  test_board_revealer.py
