[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Muaid Mughrabi"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.2"
scipy = "1.11.4"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
